feat: Add footer

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
     </script>
         <!-- Cal inline embed code ends -->
+    <script src="https://kit.fontawesome.com/91c970a70b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="navigation">
-        <div class="container">
+        <div class="nav__container">
             <div class="navigation__left">
                 <a href="./index.html"><img src="./images/jar_webforge.webp" alt="JAR Webforge logo" class="navigation__logo"></a>
                 <!-- <a href="./index.html"><img src="https://placehold.co/100x85" alt="JAR Webforge logo"></a> -->
@@ -199,7 +200,46 @@
                     Let's communicate and explore your business needs together. We're here to listen, understand your unique situation, and tailor our solutions to help you thrive in the digital world. Reach out today to start the conversation!
                 </p>
             </div>
+            <div class="form__container-right">
+                <form action="" class="form__element">
+                    <div class="form__contact-info-container">
+                        <input type="text" placeholder="Name" class="form__text-field">
+                        <input type="text" placeholder="Email" class="form__text-field">
+                    </div>
+                    <textarea type="text" placeholder="Message" class="form__text-field form__message" wrap="soft"></textarea>
+                    <input type="submit" value="Send" class="form__button">
+                </form>
+            </div>
         </div>
     </div>
+    <footer>
+        <div class="footer__container container">
+            <div class="footer__left-container">
+                <a href="#"><img src="./images/jar_webforge.webp" alt="JAR Webforge footer logo" class="footer__image"></a>
+                <p class="footer__description">
+                    Built with meticulous attention to detail, our site development prioritizes the optimization of page layout to adhere to the best possible conventions. Every element is carefully crafted to enhance user experience, ensuring seamless navigation and maximum engagement.
+                </p>
+                <a href="#" class="cta-button">Book a call</a>
+                <p class="footer__copyright">&copy; 2025 by <a href="#" class="footer__creator-tag">JAR WEBFORGE</a></p>
+            </div>
+            <div class="footer__right-container">
+                <div class="footer__browse-container">
+                    <ul class="footer__links-container">
+                        <p class="footer__links-title">BROWSE</p>
+                        <li class=""><a href="./index.html" class="navigation__link">Home</a></li>
+                        <li class=""><a href="./blog.html" class="navigation__link">Blog</a></li>
+                        <li class=""><a href="./about.html" class="navigation__link">About</a></li>
+                        <li class=""><a href="./services.html" class="navigation__link">Services</a></li>
+                    </ul>
+                </div>
+                <div class="footer__contact-container">
+                    <ul class="footer__links-container">
+                        <p class="footer__links-title">CONTACT</p>
+                        <li class=""><i class="fa-solid fa-envelope footer__email-icon"></i><a href="mailto:ruiz07014@gmail.com" class="navigation__link">ruiz07014@gmail.com</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
