feat: Remove cal and update list items

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
         Cal("init", "30min", {origin:"https://app.cal.com"});
 
@@ -19,7 +19,7 @@
         });
 
         Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
-    </script>
+    </script> -->
         <!-- Cal inline embed code ends -->
     <script src="https://kit.fontawesome.com/91c970a70b.js" crossorigin="anonymous"></script>
 </head>
@@ -225,7 +225,7 @@
             <div class="footer__right-container">
                 <div class="footer__browse-container">
                     <ul class="footer__links-container">
-                        <p class="footer__links-title">BROWSE</p>
+                        <li class="footer__links-title">BROWSE</li>
                         <li class=""><a href="./index.html" class="navigation__link">Home</a></li>
                         <li class=""><a href="./blog.html" class="navigation__link">Blog</a></li>
                         <li class=""><a href="./about.html" class="navigation__link">About</a></li>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="footer__contact-container">
                     <ul class="footer__links-container">
-                        <p class="footer__links-title">CONTACT</p>
+                        <li class="footer__links-title">CONTACT</li>
                         <li class=""><i class="fa-solid fa-envelope footer__email-icon"></i><a href="mailto:ruiz07014@gmail.com" class="navigation__link">ruiz07014@gmail.com</a></li>
                     </ul>
                 </div>
