feat: Remove font awesome, add image icon

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
     </script> -->
         <!-- Cal inline embed code ends -->
-    <script src="https://kit.fontawesome.com/91c970a70b.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="navigation">
@@ -235,7 +234,7 @@
                 <div class="footer__contact-container">
                     <ul class="footer__links-container">
                         <li class="footer__links-title">CONTACT</li>
-                        <li class=""><i class="fa-solid fa-envelope footer__email-icon"></i><a href="mailto:ruiz07014@gmail.com" class="navigation__link">ruiz07014@gmail.com</a></li>
+                        <li class="footer__email"><img src="./icons/mail-icon.png"><a href="mailto:ruiz07014@gmail.com" class="navigation__link">ruiz07014@gmail.com</a></li>
                     </ul>
                 </div>
             </div>
