--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JAR Webforge</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <!-- <script type="text/javascript">
         (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
         Cal("init", "30min", {origin:"https://app.cal.com"});
@@ -234,7 +231,7 @@
                 <div class="footer__contact-container">
                     <ul class="footer__links-container">
                         <li class="footer__links-title">CONTACT</li>
-                        <li class="footer__email"><img src="./icons/mail-icon.png"><a href="mailto:ruiz07014@gmail.com" class="navigation__link">ruiz07014@gmail.com</a></li>
+                        <li class="footer__email"><img src="./icons/mail-icon.png" alt="Envelope icon"><a href="mailto:ruiz07014@gmail.com" class="navigation__link">ruiz07014@gmail.com</a></li>
                     </ul>
                 </div>
             </div>
