--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>JAR Webforge - Custom Websites for your Business</title>
     <meta name="title" content="JAR Webforge – Custom Websites for Your Business">
     <meta name="description" content="JAR Webforge builds fast, modern, and fully customizable websites for service-based businesses. Take control of your online presence with a website that's truly yours.">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
+    <noscript><link rel="stylesheet" href="styles.css"></noscript>
+    <link rel="preload" href="./font/Lexend-Variable.ttf" as="font" type="font/ttf" crossorigin>
     <!-- <script type="text/javascript">
         (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
         Cal("init", "30min", {origin:"https://app.cal.com"});
