--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <input type="text" placeholder="Email" class="form__text-field">
                     </div>
                     <textarea type="text" placeholder="Message" class="form__text-field form__message" wrap="soft"></textarea>
-                    <input type="submit" value="Send" class="form__button">
+                    <input type="submit" value="Send" class="form__button cta-button">
                 </form>
             </div>
         </div>
