feat: Add basic hamburger menu

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <link rel="preload" href="./font/Lexend-Variable.ttf" as="font" type="font/ttf" crossorigin>
     <!-- Cal element-click embed code begins -->
     <script type="text/javascript">
-    (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-    Cal("init", "30min", {origin:"https://app.cal.com"});
+        (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if(typeof namespace === "string"){cal.ns[namespace] = cal.ns[namespace] || api;p(cal.ns[namespace], ar);p(cal, ["initNamespace", namespace]);} else p(cal, ar); return;} p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
+        Cal("init", "30min", {origin:"https://app.cal.com"});
 
-    
-    // Important: Please add the following attributes to the element that should trigger the calendar to open upon clicking.
-    // `data-cal-link="jarwebforge/30min"`
-    // data-cal-namespace="30min"
-    // `data-cal-config='{"layout":"month_view"}'`
+        
+        // Important: Please add the following attributes to the element that should trigger the calendar to open upon clicking.
+        // `data-cal-link="jarwebforge/30min"`
+        // data-cal-namespace="30min"
+        // `data-cal-config='{"layout":"month_view"}'`
 
-    Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
+        Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
     </script>
     <!-- Cal element-click embed code ends -->
 </head>
@@ -32,13 +32,14 @@
                 <!-- <a href="./index.html"><img src="https://placehold.co/100x85" alt="JAR Webforge logo"></a> -->
             </div>
             <div class="navigation__right">
-                <ul class="navigation__links-container">
+                <ul class="navigation__links-container" id="navBar">
                     <li class=""><a href="./index.html" class="navigation__link">Home</a></li>
                     <li class=""><a href="./blog.html" class="navigation__link">Blog</a></li>
                     <li class=""><a href="./about.html" class="navigation__link">About</a></li>
                     <li class=""><a href="./services.html" class="navigation__link">Services</a></li>
-                    <li class=""><a href="#meet" class="cta-button">Book a call</a></li>
+                    <li class=""><a href="#meet" onclick="toggleResponsiveNav()" class="cta-button">Book a call</a></li>
                 </ul>
+                <a href="javascript:void(0);" onclick="toggleResponsiveNav()" class="navigation__hamburger-menu"><img src="./icons/hamburger-menu.png" alt="Hamburger menu icon" class="navigation__hamburger-menu-icon"></a>
             </div>
         </div>
     </div>
@@ -243,5 +244,6 @@
             </div>
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
