feat: Add Google analytics tag

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     </script>
     <!-- Cal element-click embed code ends -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LDF2CZ4WP0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LDF2CZ4WP0');
+</script>
 <body>
     <div class="navigation">
         <div class="nav__container">
