feat: Update SEO and side scroll issue

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JAR Webforge - Custom Websites for your Business</title>
+    <title>Web Design Company for Small Businesses | JAR Webforge</title>
     <meta name="title" content="JAR Webforge – Custom Websites for Your Business">
-    <meta name="description" content="JAR Webforge builds fast, modern, and fully customizable websites for service-based businesses. Take control of your online presence with a website that's truly yours.">
+    <meta name="description" content="Affordable custom website design and SEO services for small businesses. JAR Webforge builds websites that attract customers and grow your business.">
     <link rel="stylesheet" href="styles.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="styles.css"></noscript>
     <link rel="preload" href="./font/Lexend-Variable.ttf" as="font" type="font/ttf" crossorigin>
@@ -23,21 +23,38 @@
         Cal.ns["30min"]("ui", {"hideEventTypeDetails":false,"layout":"month_view"});
     </script>
     <!-- Cal element-click embed code ends -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "JAR Webforge",
+        "description": "Web design company for small businesses. Affordable custom websites with SEO.",
+        "url": "https://jarwebforge.com",
+        "logo": "https://jarwebforge.com/images/jar_webforge.webp",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "email": "ruiz07014@gmail.com",
+            "telephone": "+1-703-862-4896"
+            "contactType": "sales",
+            "areaServed": "US"
+        }
+    }
+    </script>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LDF2CZ4WP0"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'G-LDF2CZ4WP0');
+    gtag('config', 'G-LDF2CZ4WP0');
 </script>
 <body>
     <div class="navigation">
         <div class="nav__container">
             <div class="navigation__left">
-                <a href="./index.html"><img src="./images/jar_webforge.webp" alt="JAR Webforge logo" class="navigation__logo"></a>
+                <a href="./index.html"><img src="./images/jar_webforge.webp" alt="JAR Webforge - Web Design Company for Small Businesses" class="navigation__logo" loading="lazy"></a>
                 <!-- <a href="./index.html"><img src="https://placehold.co/100x85" alt="JAR Webforge logo"></a> -->
             </div>
             <div class="navigation__right">
@@ -48,13 +65,13 @@
                     <li class=""><a href="./services.html" class="navigation__link">Services</a></li>
                     <li class=""><a href="#meet" onclick="toggleResponsiveNav()" class="cta-button">Book a call</a></li>
                 </ul>
-                <a href="javascript:void(0);" onclick="toggleResponsiveNav()" class="navigation__hamburger-menu"><img src="./icons/hamburger-menu.png" alt="Hamburger menu icon" class="navigation__hamburger-menu-icon"></a>
+                <a href="javascript:void(0);" onclick="toggleResponsiveNav()" class="navigation__hamburger-menu"><img src="./icons/hamburger-menu.png" alt="Hamburger menu icon" class="navigation__hamburger-menu-icon" loading="lazy"></a>
             </div>
         </div>
     </div>
     <header class="header">
         <div class="header__content container">
-            <h1 class="header__title">A Website That's Truly <span class="header__title-yours">Yours</span>.</h1>
+            <h1 class="header__title">Custom Web Design for Small Businesses – A Website That’s Truly <span class="header__title-yours">Yours</span>.</h1>
             <p class="header__subtext">Built in real code so you own it outright — no subscriptions, no hidden fees, no lock-ins.</p>
             <div class="header__buttons-container">
                 <a href="#meet" class="cta-button">Get Started Today</a>
@@ -64,7 +81,7 @@
     </header>
     <div class="services">
         <div class="services__container container">
-            <h2 class="services__title section__title">Services</h2>
+            <h2 class="services__title section__title">Affordable Website Design Packages</h2>
             <div class="services__cards-container">
                 <div class="services__card">
                     <p class="services__card-title">Starter Landing Page</p>
@@ -72,7 +89,7 @@
                     <ul class="services__card-list">
                         <li class="services__card-list-item">1-page site with key sections (hero, services, about, contact)</li>
                         <li class="services__card-list-item">Optimized and Device Responsive Website Design</li>
-                        <li class="services__card-list-item">Fundemental Search Engine Optimization</li>
+                        <li class="services__card-list-item">Search engine optimization (SEO)</li>
                         <li class="services__card-list-item">Google Integration (Google Business Profile, Analytics, and Search Console)</li>
                     </ul>
                 </div>
@@ -83,7 +100,7 @@
                     <ul class="services__card-list">
                         <li class="services__card-list-item services__card-list-item-white">Up to 5 page site (Home, about, services, contact, etc)</li>
                         <li class="services__card-list-item services__card-list-item-white">Optimized and Device Responsive Website Design</li>
-                        <li class="services__card-list-item services__card-list-item-white">Fundemental Search Engine Optimization</li>
+                        <li class="services__card-list-item services__card-list-item-white">Search engine optimization (SEO)</li>
                         <li class="services__card-list-item services__card-list-item-white">Google Integration (Google Business Profile, Analytics, and Search Console)</li>
                         <li class="services__card-list-item services__card-list-item-white">Blog Integration (optional)</li>
                     </ul>
@@ -98,7 +115,7 @@
                         <li class="services__card-list-item services__card-list-item-gold">1 hour of support per month</li>
                         <li class="services__card-list-item">Up to 5+ page site (Home, about, services, contact, etc)*</li>
                         <li class="services__card-list-item">Optimized and Device Responsive Website Design</li>
-                        <li class="services__card-list-item">Fundemental Search Engine Optimization</li>
+                        <li class="services__card-list-item">Search engine optimization (SEO)</li>
                         <li class="services__card-list-item">Blog Integration (optional)</li>
                     </ul>
                     <p class="services_card-asterisk">*additional initial charges for after the 5th page.</p>
@@ -109,7 +126,7 @@
     </div>
     <div class="development">
         <div class="development__container container">
-            <h2 class="development__title section__title">Development Process</h2>
+            <h2 class="development__title section__title">Our Web Design Process</h2>
             <div class="development__steps-container">
                 <div class="development__step">
                     <p class="development__step-number">#1</p>
@@ -131,12 +148,12 @@
     </div>
     <div class="testimony">
         <div class="testimony__container container">
-            <h2 class="section__title section__title-white">Testimony</h2>
+            <h2 class="section__title section__title-white">Client Testimonial: Small Business Website Success</h2>
             <p class="quote-symbol">”</p>
             <p class="testimony__text">My website became more easily navigated by visitors and gave us a more professional appearance!</p>
             <p class="testimony__subtext">“We were in the process of marketing our services on our end, but our website was not representative of our business. It was difficult to navigate and not clear in structure. This is where JAR Webforge helped us with a 7-hour turn around to give fondation to our marketing strategy.”</p>
             <div class="testimony__client-info">
-                <img src="./images/suburbanpass_logo.webp" alt="sub-Urban Pool And Spa Logo" class="testimony__client-img">
+                <img src="./images/suburbanpass_logo.webp" alt="Sub-Urban Pool and Spa - Website Design Client of JAR Webforge" class="testimony__client-img" loading="lazy">
                 <div class="testimony__client-company-info">
                     <p class="testimony__client-name">Adam Cook</p>
                     <p class="testimony__client-company-name">Sub-Urban Pool and Spa</p>
@@ -148,17 +165,19 @@
         <div class="about__container container">
             <div class="about__info-container">
                 <h2 class="section__title">ABOUT</h2>
-                <p class="about__description">JAR Webforge is your premier destination for unparalleled digital innovation and excellence. We pride ourselves on being a trailblazer in the realm of web design and dynamic marketing solutions, dedicated wholeheartedly to the success of businesses in the vast expanse of the online world. Our unwavering commitment to delivering results that surpass expectations is evident in every facet of our work.</p>
+                <p class="about__description">
+                    We help small businesses grow with affordable, custom websites designed to rank in Google and win customers. We pride ourselves on being a trailblazer in the realm of web design and dynamic marketing solutions, dedicated wholeheartedly to the success of businesses in the vast expanse of the online world. Our unwavering commitment to delivering results that surpass expectations is evident in every facet of our work.
+                </p>
                 <a href="#" class="about__btn cta-button">More about us</a>
             </div>
             <div class="about__img-container">
-                <img src="./images/computer_img.webp" alt="Computer and phone website demonstration" class="about__img">
+                <img src="./images/computer_img.webp" alt="Computer and phone website demonstration" class="about__img" loading="lazy">
             </div>
         </div>
     </div>
     <div class="faq">
         <div class="faq__container container">
-            <h2 class="section__title">FAQ</h2>
+            <h2 class="section__title">Web Design & Website Development FAQs</h2>
             <div class="faq__questions-container">
                 <details class="faq__item">
                     <summary class="faq__question">How long will it take to develop the website?</summary>
@@ -215,10 +234,10 @@
             <div class="form__container-right">
                 <form action="" class="form__element">
                     <div class="form__contact-info-container">
-                        <input type="text" placeholder="Name" class="form__text-field">
-                        <input type="text" placeholder="Email" class="form__text-field">
+                        <input type="text" name="name" placeholder="Name" class="form__text-field">
+                        <input type="email" name="email" placeholder="Email" class="form__text-field">
                     </div>
-                    <textarea type="text" placeholder="Message" class="form__text-field form__message" wrap="soft"></textarea>
+                    <textarea name="message" type="text" placeholder="Message" class="form__text-field form__message" wrap="soft"></textarea>
                     <input type="submit" value="Send" class="form__button cta-button">
                 </form>
             </div>
@@ -227,9 +246,9 @@
     <footer>
         <div class="footer__container container">
             <div class="footer__left-container">
-                <a href="#"><img src="./images/jar_webforge.webp" alt="JAR Webforge footer logo" class="footer__image"></a>
+                <a href="#"><img src="./images/jar_webforge.webp" alt="JAR Webforge - Web Design Company for Small Businesses" class="footer__image" loading="lazy"></a>
                 <p class="footer__description">
-                    Built with meticulous attention to detail, our site development prioritizes the optimization of page layout to adhere to the best possible conventions. Every element is carefully crafted to enhance user experience, ensuring seamless navigation and maximum engagement.
+                    JAR Webforge is a web design company for small businesses. We build affordable, custom websites with SEO that help you grow online.
                 </p>
                 <a href="#meet" class="cta-button">Book a call</a>
                 <p class="footer__copyright">&copy; 2025 by <a href="#" class="footer__creator-tag">JAR WEBFORGE</a></p>
@@ -247,7 +266,8 @@
                 <div class="footer__contact-container">
                     <ul class="footer__links-container">
                         <li class="footer__links-title">CONTACT</li>
-                        <li class="footer__email"><img src="./icons/mail-icon.png" alt="Envelope icon"><a href="mailto:ruiz07014@gmail.com" class="navigation__link">ruiz07014@gmail.com</a></li>
+                        <li class="footer__email"><img src="./icons/mail-icon.png" alt="Envelope icon"><a href="mailto:ruiz07014@gmail.com" class="navigation__link" loading="lazy">ruiz07014@gmail.com</a></li>
+                        <li class="footer__email"><img src="./icons/phone-icon.png" alt="Envelope icon"><a href="tel:7038624896" class="navigation__link" loading="lazy">(703) 862-4896</a></li>
                     </ul>
                 </div>
             </div>
