--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline-30min"></div>
         </div>
     </div>
-    <div class="form">
+    <div class="form" name="contact" netlify>
         <div class="form__container container">
             <div class="form__container-left">
                 <h2 class="section__title">Or send us a message.</h2>
