fix: Move location of form properties

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             <div style="width:100%;height:100%;overflow:scroll" id="my-cal-inline-30min"></div>
         </div>
     </div>
-    <div class="form" name="contact" netlify>
+    <div class="form">
         <div class="form__container container">
             <div class="form__container-left">
                 <h2 class="section__title">Or send us a message.</h2>
@@ -232,7 +232,7 @@
                 </p>
             </div>
             <div class="form__container-right">
-                <form action="" class="form__element">
+                <form action="" class="form__element" name="contact" netlify>
                     <div class="form__contact-info-container">
                         <input type="text" name="name" placeholder="Name" class="form__text-field">
                         <input type="email" name="email" placeholder="Email" class="form__text-field">
