feat: Add mobile padding and update button

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <p class="services_card-asterisk">*additional initial charges for after the 5th page.</p>
                 </div>
             </div>
-            <a href="#" class="cta-button">Book Your Starter Website</a>
+            <a href="#meet" class="cta-button">Book Your Website Call</a>
         </div>
     </div>
     <div class="development">
