fix: Add comma after phone number

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         "contactPoint": {
             "@type": "ContactPoint",
             "email": "ruiz07014@gmail.com",
-            "telephone": "+1-703-862-4896"
+            "telephone": "+1-703-862-4896",
             "contactType": "sales",
             "areaServed": "US"
         }
